--- a/2.html
+++ b/2.html
@@ -21,5 +21,27 @@
     If the markup language (ex: HTML) is responsible for the body of a website, the CSS is responsible for decorating like clothes and accessories.In other words, if you leave the HTML structure intact and change the CSS file, you can decorate it like a completely different website.
     
     For CSS3 currently under development, features that can replace images produced by graphic editing programs such as shadow effects, gradations, and variations have been added.In addition, various animation features have been added to replace Adobe Flash to some extent.</p>
+
+<p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://web1-rpsxke5wod.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
 </body>
 </html>
